controller modification and requests.md