@@ -13,7 +13,6 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Pattern;
 
 @Component
 public class MailSearchRepositoryImplement implements MailSearchRepository{
@@ -21,15 +20,28 @@ public class MailSearchRepositoryImplement implements MailSearchRepository{
     @Autowired
     private MongoClient mongoClient;
 
+    private List<Mail.EmailValue> convertDocumentToEmailValueList(List<Document> documents) {
+        List<Mail.EmailValue> emailValues = new ArrayList<>();
+        for (Document document : documents) {
+            String email = document.getString("email");
+            boolean value = document.getBoolean("value");
+            emailValues.add(new Mail.EmailValue(email, value));
+        }
+        return emailValues;
+    }
+
     private Mail convertDocumentToMail(Document document){
         String id = document.getObjectId("_id").toString();
         String sender = document.getString("sender");
-        String receiver = document.getString("receiver");
+
+        List<Mail.EmailValue> to = convertDocumentToEmailValueList(document.getList("to", Document.class));
+        List<Mail.EmailValue> cc = convertDocumentToEmailValueList(document.getList("cc", Document.class));
+        List<Mail.EmailValue> bcc = convertDocumentToEmailValueList(document.getList("bcc", Document.class));
+
         String subject = document.getString("subject");
         String message = document.getString("message");
-        boolean seen = document.getBoolean("seen");
 
-        return new Mail(id,sender,receiver,subject,message,seen);
+        return new Mail(id, sender, to, cc, bcc, subject, message);
     }
 
     @Override
@@ -37,12 +49,22 @@ public class MailSearchRepositoryImplement implements MailSearchRepository{
 
         MongoDatabase database = mongoClient.getDatabase("EmailService");
         MongoCollection<Document> collection = database.getCollection("mail");
-        AggregateIterable<Document> result = collection.aggregate(Arrays.asList(new Document("$match",
-                        new Document("$or", Arrays.asList(new Document("sender", email.getEmail()),
-                        new Document("receiver", email.getEmail()))))));
+
+        String targetEmail = email.getEmail();
+
+        AggregateIterable<Document> result = collection.aggregate(List.of(new Document("$match",
+                new Document("$or", Arrays.asList(new Document("sender", targetEmail),
+                        new Document("to",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))),
+                        new Document("cc",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))),
+                        new Document("bcc",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))))))));
 
         List<Mail> ans = new ArrayList<>();
-
         result.forEach(document -> {
             ans.add(convertDocumentToMail(document));
         });
@@ -55,7 +77,8 @@ public class MailSearchRepositoryImplement implements MailSearchRepository{
     public List<Mail> findAllSent(Email email) {
         MongoDatabase database = mongoClient.getDatabase("EmailService");
         MongoCollection<Document> collection = database.getCollection("mail");
-        AggregateIterable<Document> result = collection.aggregate(Arrays.asList(new Document("$match", new Document("sender", email.getEmail()))));
+
+        AggregateIterable<Document> result = collection.aggregate(List.of(new Document("$match", new Document("sender", email.getEmail()))));
 
         List<Mail> ans = new ArrayList<>();
 
@@ -71,7 +94,19 @@ public class MailSearchRepositoryImplement implements MailSearchRepository{
 
         MongoDatabase database = mongoClient.getDatabase("EmailService");
         MongoCollection<Document> collection = database.getCollection("mail");
-        AggregateIterable<Document> result = collection.aggregate(Arrays.asList(new Document("$match", new Document("receiver",email.getEmail()))));
+
+        String targetEmail = email.getEmail();
+
+        AggregateIterable<Document> result = collection.aggregate(List.of(new Document("$match",
+                new Document("$or", Arrays.asList(new Document("to",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))),
+                        new Document("cc",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))),
+                        new Document("bcc",
+                                new Document("$elemMatch",
+                                        new Document("email", targetEmail))))))));
 
         List<Mail> ans = new ArrayList<>();
 
@@ -84,20 +119,30 @@ public class MailSearchRepositoryImplement implements MailSearchRepository{
     }
 
     @Override
-    public List<Mail> findBySearchText(Email email, String text) {
+    public List<Mail> findBySearchText(Email email, String targetText) {
         MongoDatabase database = mongoClient.getDatabase("EmailService");
         MongoCollection<Document> collection = database.getCollection("mail");
+
+        String targetEmail = email.getEmail();
+
         AggregateIterable<Document> result = collection.aggregate(Arrays.asList(new Document("$match",
-                        new Document("$or", Arrays.asList(new Document("sender", email.getEmail()), new Document("receiver", email.getEmail())))),
+                        new Document("$or", Arrays.asList(new Document("sender", targetEmail),
+                                new Document("to",
+                                        new Document("$elemMatch",
+                                                new Document("email", targetEmail))),
+                                new Document("cc",
+                                        new Document("$elemMatch",
+                                                new Document("email", targetEmail))),
+                                new Document("bcc",
+                                        new Document("$elemMatch",
+                                                new Document("email", targetEmail)))))),
                 new Document("$match",
-                        new Document("$or", Arrays.asList(new Document("sender",
-                                        new Document("$regex", Pattern.compile(text + "(?i)"))),
-                                new Document("receiver",
-                                        new Document("$regex", Pattern.compile(text + "(?i)"))),
-                                new Document("subject",
-                                        new Document("$regex", Pattern.compile(text + "(?i)"))),
-                                new Document(" message",
-                                        new Document("$regex", Pattern.compile(text + "(?i)"))))))));
+                        new Document("$or", Arrays.asList(new Document("subject",
+                                        new Document("$regex", targetText)
+                                                .append("$options", "i")),
+                                new Document("message",
+                                        new Document("$regex", targetText)
+                                                .append("$options", "i")))))));
 
         List<Mail> ans = new ArrayList<>();
 
